--- a/puctesis_ejemplo.tex
+++ b/puctesis_ejemplo.tex
@@ -241,7 +241,13 @@
 \chapter*{RESUMEN}
 %................................
 %................................
-**TO DO**
+El comercio internacional es un aspecto fundamental de la actividad económica de un país. Se ha mostrado consistentemente en la literatura que la apertura económica es uno de los principales motores del crecimiento económico de los países \shortcite{berg2003trade,Dollar2003133,Wacziarg2008}. El objetivo de este estudio es investigar si los líderes nacionales ejercen un efecto significativo en la apertura económica y consecuentemente en el crecimiento del comercio internacional de sus países. Además, se busca establecer si las características de personalidad de los líderes permiten explicar este efecto.
+
+Para ello se usan las salidas inesperadas de líderes, por causa de muerte o grave enfermedad, como fuente de variación exógena en el liderazgo de los países. Se muestra que el crecimiento del comercio internacional experimenta cambios de tendencia de manera consistente durante las transiciones de líderes en el poder. 
+
+Posteriormente se relaciona el efecto de los líderes en el crecimiento del comercio internacional con sus rasgos de personalidad. Para medir la personalidad se emplea el modelo de los Cinco Grandes, que identifica cinco dimensiones de personalidad relevantes (extraversión, responsabilidad, amabilidad, apertura al cambio e inestabilidad emocional). Para generar medidas cuantitativas de los Cinco Grandes se emplea un modelo de aprendizaje de máquina, el cual genera medidas de personalidad de un líder a partir de textos de sus discursos. Este modelo, adaptado de \shortcite{Mairesse2007}, se basa en correlaciones existentes entre  patrones de escritura y rasgos de personalidad. Los resultados obtenidos sugieren que los rasgos de personalidad de los líderes sí influyen en el crecimiento del comercio internacional. Más específicamente, se muestra que este crecimiento es mayor durante el mandato de líderes más extravertidos, más responsables y más amables.
+
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -251,13 +257,18 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 ~\vfill
-{\bf Palabras Claves:} \parbox[t]{.75\textwidth}{**TO DO**.
+{\bf Palabras Claves:} \parbox[t]{.75\textwidth}{Líderes, Comercio internacional, Personalidad, Cinco Grandes.
 }
 
 \chapter*{ABSTRACT}
 %................................
 %................................
-**TO DO**
+Trade is a fundamental constituent of a country's economy. Research has consistently shown that economic openness is one the most important factors explaining economic growth \shortcite{berg2003trade,Dollar2003133,Wacziarg2008}. The goal of this study is to examine whether leaders have a causative effect in the growth rate of trade. In addition, this study aims to establish whether leaders' personality traits help explain this effect.
+
+In order to perform this analysis, leaders' unexpected exits (whether because of death or serious illness) are used as source of exogenous variation in leadership. It is shown that these transitions in leadership are associated with consistent shifts in the growth rate of trade. 
+
+Then the effect of leaders on trade is related to their personality traits. Personality is measured using the ``Big Five'' personality model, which identifies five most important dimensions (extraversion, conscientiousness, agreeableness, openness to experience and neurotism). Personality estimates are obtained by means of a Machine Learning algorithm, which uses leaders' speeches to generate Big Five measures. This algorithm, adapted from \shortcite{Mairesse2007}, connect linguistic patterns in written speech to known correlations with personality. Results suggest that personality traits do help explain growth rate of trade. Specifically, it is found that the growth rate is greater during the tenure of more extraverted, more conscientious and more agreeable leaders.
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %   KEYWORDS                                       %
@@ -266,7 +277,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 ~\vfill
-{\bf Keywords:} \parbox[t]{.8\textwidth}{**TO DO**.
+{\bf Keywords:} \parbox[t]{.8\textwidth}{Leaders, Trade, Personality traits, Big Five.
 }
 
 \cleardoublepage % In double-sided printing style makes the next page 
@@ -636,7 +647,7 @@ Los líderes deben tener presente que la liberalización del comercio internaciona
 
 Por otra parte, la evidencia empírica indica que  las personas más extrovertidas son más optimistas \cite{Sharpe2011}. En la misma línea, \citeA{Pearce-McCall1986} muestran que individuos más extrovertidos tienen expectativas de éxito más altas y estables en escenarios donde el resultado es incierto \cite{Pearce-McCall1986}. Estos resultados sugieren que los líderes más extrovertidos al balancear los resultados inciertos de una política liberalizadora valorarán más los potenciales beneficios y serán más tendientes a restarle importancia a los potenciales costos. 
 
-Otro aspecto importante a considerar es la disposición de los líderes a valorar y promover la integración internacional. Los Tratados de Libre Comercio (TLC) son compromisos internacionales que a menudo requieren la disposición de los suscriptores a dar concesiones en pos de un mayor beneficio colectivo. Por ejemplo, se suele criticar que la globalización restringe cada vez más la soberanía de los países al imponer regulaciones que atañen materias tan variadas como  salud y medio ambiente \cite{Howse2000}. Por ello, la realización de TLC suele generar opiniones dispares en los políticos. Ciertamente aquellos líderes que ven un mayor valor en la integración internacional y en la globalización, serán más proclives a suscribir este tipo de acuerdos. Ahora bien,
+Otro aspecto importante a considerar es la disposición de los líderes a valorar y promover la integración internacional. Los Tratados de Libre Comercio (TLC) son compromisos internacionales que a menudo requieren la disposición de los suscriptores a dar concesiones en pos de un mayor beneficio colectivo. Por ejemplo, se suele criticar que la globalización restringe cada vez más la soberanía de los países al imponer regulaciones que atañen materias tan variadas como  salud y medio ambiente \cite{Howse2000}. Por ello, la realización de TLC suele generar opiniones dispares en los políticos\footnote{Se intentó examinar la relación entre los Cinco Grandes y la disposición a firmar TLC de un líder, pero no se encontraron datos suficientes.}. Ciertamente aquellos líderes que ven un mayor valor en la integración internacional y en la globalización, serán más proclives a suscribir este tipo de acuerdos. Ahora bien,
 en \cite{Etheredge} se argumenta que líderes más extrovertidos son más proclives a defender y adoptar políticas de cooperación en el ámbito internacional. Líderes extrovertidos son caracterizados como integradores y conciliadores, mientras que líderes más introvertidos son caracterizados como excluyentes y veladores del \textit{status quo}. 
 Estos resultados en conjunto sugieren que líderes más extravertidos prefieren políticas liberalizadoras sobre políticas proteccionistas, lo que lleva a plantear la siguiente hipótesis:
 \vspace{.5cm}
@@ -708,11 +719,11 @@ En base a los resultados experimentales expuestos, el uso de modelos de predicci
 	\label{fig:bf_discurso}
 		\medskip % induce some separation between caption and explanatory material
 		\begin{minipage}{\textwidth} % choose width suitably
-			{\footnotesize  Notas: Esquema del proceso empleado para estimar los Cinco Grandes de un líder a partir de sus discursos. La primera etapa consiste en buscar discursos de cada líder hasta tener al menos 10.000 palabras. En la segunda etapa se usan las categorías LIWC para clasificar las palabras. Luego, en la tercera etapa los puntajes de cada líder son normalizados para atenuar el efecto de categorías no presentes en discursos políticos. Por último, en la cuarta etapa se usa el modelo de predicción \textit{Support Vector Machines  for Regression} (SMOreg) para estimar los Cinco Grandes a partir de los puntajes en las categorías LIWC. En el ejemplo se muestra un extracto de un discurso del líder ruso Joseph Stalin y los puntajes estimados. Los puntajes en extraversión y amabilidad están considerablemente bajo la media de la muestra de líderes,  mientras que en estabilidad emocional se observa lo contrario. Estos resultados son consistentes con la imagen de Stalin como un líder frío, cruel y mal orador \cite[p. 45]{tarrant1992stalingrad}.\par}
+			{\footnotesize  Notas: Esquema del proceso empleado para estimar los Cinco Grandes de un líder a partir de sus discursos. La primera etapa consiste en buscar discursos de cada líder hasta recolectar al menos 15. En la segunda etapa se usan las categorías LIWC para clasificar las palabras. Luego, en la tercera etapa los puntajes de cada líder son normalizados para atenuar el efecto de categorías no presentes en discursos políticos. Por último, en la cuarta etapa se usa el modelo de predicción \textit{Support Vector Machines  for Regression} (SMOreg) para estimar los Cinco Grandes a partir de los puntajes en las categorías LIWC. En el ejemplo se muestra un extracto de un discurso del líder ruso Joseph Stalin y los puntajes estimados. Los puntajes en extraversión y amabilidad están considerablemente bajo la media de la muestra de líderes,  mientras que en estabilidad emocional se observa lo contrario. Estos resultados son consistentes con la imagen de Stalin como un líder frío, cruel y mal orador \cite[p. 45]{tarrant1992stalingrad}.\par}
 		\end{minipage}
 \end{figure}
 
-Para cada líder con salida aleatoria y su respectivo sucesor se recolectaron textos de discursos pronunciados durante sus vidas. Además se usaron cartas, extractos de libros y transcripciones de entrevistas cuando no había suficiente texto proveniente de discursos. Se buscaron textos en inglés o en español puesto que la herramienta de predicción de la personalidad permite analizar textos en solo estos dos idiomas\footnote{Más específicamente, esta herramienta utiliza diccionarios para clasificar las palabras presentes en los textos y solo los diccionarios español e inglés se encuentran disponibles.}. Para cada líder se buscaron discursos hasta recolectar 15, siempre que fuese posible, pues con este número de discursos se asegura que existe un número de palabras por líder más que suficiente para estimar su personalidad\footnote{Los modelos estadísticos de predicción de la personalidad desarrollados en \cite{Mairesse2007} fueron entrenados usando textos de 650 palabras en promedio.}. Se determinó mantener solo aquellos líderes en la muestra para los cuales se tiene un número de palabras mayor o igual a 800. La tabla \ref{tab:speeches} muestra un resumen del conjunto de textos encontrados. En total se encontraron 1888 discursos para 197 líderes (entre salientes y sucesores), lo que da un número promedio de palabras por líder cercano a 14 mil.
+Para cada líder con salida aleatoria y su respectivo sucesor se recolectaron textos de discursos pronunciados durante sus vidas. Además se usaron cartas, extractos de libros y transcripciones de entrevistas cuando no había suficiente texto proveniente de discursos. Se buscaron textos en inglés o en español puesto que la herramienta de predicción de la personalidad permite analizar textos en solo estos dos idiomas\footnote{Más específicamente, esta herramienta utiliza diccionarios para clasificar las palabras presentes en los textos y solo los diccionarios español e inglés se encuentran disponibles.}. Además se dio preferencia a aquellos discursos escritos en la lengua materna del líder. Para cada líder se buscaron discursos hasta recolectar 15, siempre que fuese posible, pues con este número de discursos se asegura que existe un número de palabras por líder más que suficiente para estimar su personalidad\footnote{Los modelos estadísticos de predicción de la personalidad desarrollados en \cite{Mairesse2007} fueron entrenados usando textos de 650 palabras en promedio.}. Se determinó mantener solo aquellos líderes en la muestra para los cuales se tiene un número de palabras mayor o igual a 800. La tabla \ref{tab:speeches} muestra un resumen del conjunto de textos encontrados. En total se encontraron 1888 discursos para 197 líderes (entre salientes y sucesores), lo que da un número promedio de palabras por líder cercano a 14 mil.
 
  
 \begin{table}[H]\centering \caption{Estadísticas de los discursos encontrados\label{tab:speeches}}
@@ -1450,7 +1461,15 @@ La tabla \ref{tab:suc} muestra los resultados obtenidos al estimar \ref{eq:reg_b
 \end{table}
 %\subsection{Robustez con respecto al plazo de observación}
 \chapter{CONCLUSIONES}
-**TO DO**
+El tema de interés en este estudio es el efecto de los líderes nacionales sobre el crecimiento del comercio internacional de sus países. Puesto que la apertura económica y el comercio internacional cumplen un rol fundamental propulsando el crecimiento económico y el desarrollo de los países, resulta de gran importancia conocer los determinantes de estas variables. Sin embargo, hasta ahora se había puesto poca o nula atención el rol de los líderes nacionales.  El estudio presentado en esta memoria es el primer en proveer evidencia del efecto de los líderes sobre el comercio internacional. Además, este es el primer estudio que analiza el efecto de los Cinco grandes rasgos de personalidad  de líderes nacionales a nivel global.
+
+En este estudio se analizan dos hipótesis centrales. La primera es que los líderes nacionales afectan de manera significativa el comercio internacional de sus países. La segunda es que las características de personalidad de los líderes permiten explicar este efecto. Esta segunda hipótesis engloba  a su vez 4 hipótesis referentes a cada rasgo de personalidad.
+En el capítulo 2 de esta memoria se analiza la primera hipótesis. La idea central de este análisis es observar el cambio del crecimiento promedio del comercio internacional ocurrido durante las transiciones de líderes en el poder. También es fundamental que el momento en que estas transiciones ocurren sea aleatorio. Por este motivo se conformó una muestra con líderes que dejaron el cargo de forma inesperada. Los resultados obtenidos muestran que la tasa de crecimiento del comercio internacional experimenta cambios anormales de manera consistente durante las transiciones aleatorias, lo cual sugiere que la primera hipótesis es efectivamente válida. 
+
+Posteriormente, en el capítulo 3 se estudia la segunda hipótesis. De manera más específica, se emplea el modelo de los Cinco Grandes rasgos de personalidad y se conjetura que líderes más extravertidos, más responsables, más amables y más abiertos al cambio tienen un efecto positivo sobre el crecimiento del comercio internacional. Para analizar estas hipótesis se estimaron los rasgos de personalidad de los líderes a partir de textos de sus discursos. Se elaboró una base de datos de  1888 discursos de 197 líderes. Posteriormente, se empleó un algoritmo desarrollado recientemente para estimar la personalidad de los líderes a partir de sus discursos. Las medidas de personalidad estimadas mediante este método se muestran robustas ante una serie de análisis y pruebas. Luego se relacionaron estas medidas de personalidad con los efectos de los líderes estimados en el capítulo 2. Se encontró evidencia robusta de la importancia de tres de las cinco dimensiones de personalidad para explicar el efecto de los líderes sobre el comercio internacional. Líderes más extravertidos afectan positivamente el crecimiento y una desviación estándar de diferencia en esta dimensión se traduce en un 3\% de diferencia en el crecimiento del comercio internacional. De manera similar, líderes más responsables y más amables también ejercen un efecto positivo. Una desviación estándar de diferencia en responsabilidad y amabilidad se traduce en un 3\% y 3\% de diferencia en el crecimiento, respectivamente. Un análisis posterior muestra que los dos rasgos de personalidad más importantes resultan ser extraversión y amabilidad. 
+
+Cabe señalar que los resultados obtenidos pueden motivar otras líneas de investigación relacionadas. Por una parte, resulta interesante la pregunta sobre qué otras variables de interés político, económico o financiero podrían ser afectadas por líderes nacionales y  en particular por sus características de personalidad. Una de las variables que ha llamado la atención de los autores de este estudio es la participación de los países en conflictos armados. De manera intuitiva cabría esperar que los factores inestabilidad emocional y amabilidad jueguen un rol en el proceso de toma de decisiones de un líder confrontado ante la posibilidad de entrar en un conflicto internacional. Por otra parte, también puede ser interesante el uso de la metodología usada en este estudio para analizar el efecto de la personalidad en la labor de otros políticos y personajes públicos, tales como ministros, legisladores o CEO de empresas.
+
            %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
            %    CAPITULO 7
            %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
