--- a/puctesis_ejemplo.tex
+++ b/puctesis_ejemplo.tex
@@ -142,7 +142,7 @@
            %  INICIALIZACIONES : PORTADA                      %
            %                                                  %
            %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\draft                        %añade nota al pie con fecha del borrador
+%\draft                        %añade nota al pie con fecha del borrador
 \mdate{Marzo 1, 2016}         %fecha de modificacion del manuscrito
 \version{1}                    %numero de version del manuscrito
 
@@ -204,7 +204,23 @@
            %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter*{AGRADECIMIENTOS}
-**TO DO**
+Si tuviera que agradecer a todas las personas que contribuyeron de una u otra forma
+durante toda la carrera, probablemente todas las resmas de una gran librería no alcanzarían a
+cubrir esta sección. Incluso si quisiera agradecer solamente a cada persona que contribuyó a
+mi memoria, podría triplicar la extensión total de esta última.
+
+Esta memoria permite coronar la obtención de un título que, si bien tendrá sólo mi
+nombre, debiera incluir los nombres de mi madre y mi padre, que siempre han estado allí para apoyarme
+en todo lo humanamente posible y han sido un pilar fundamental en cada uno de mis pasos.
+
+Parte importante de esta investigación se plasma en todas las ideas y asertivos comentarios
+de los dos brillantes profesores que me guiaron durante este proceso, Pablo Hernández
+y Tomás Reyes. He aprendido mucho de ustedes y espero reflejarlo en la memoria.
+La construcción de la base de datos involucró a muchas personas más que contribuyeron
+con un trabajo que habría sido irrealizable de otra forma.
+Y finalmente, para todos aquellos (muchos) que no estoy incluyendo y que me ayudaron
+con su granito de arena, mil y un gracias.
+
 %................................
 
 \cleardoublepage % En la impresion en doble cara, este comando hace que
@@ -1461,12 +1477,13 @@ La tabla \ref{tab:suc} muestra los resultados obtenidos al estimar \ref{eq:reg_b
 \end{table}
 %\subsection{Robustez con respecto al plazo de observación}
 \chapter{CONCLUSIONES}
-El tema de interés en este estudio es el efecto de los líderes nacionales sobre el crecimiento del comercio internacional de sus países. Puesto que la apertura económica y el comercio internacional cumplen un rol fundamental propulsando el crecimiento económico y el desarrollo de los países, resulta de gran importancia conocer los determinantes de estas variables. Sin embargo, hasta ahora se había puesto poca o nula atención el rol de los líderes nacionales.  El estudio presentado en esta memoria es el primer en proveer evidencia del efecto de los líderes sobre el comercio internacional. Además, este es el primer estudio que analiza el efecto de los Cinco grandes rasgos de personalidad  de líderes nacionales a nivel global.
+El tema de interés en este estudio es el efecto de los líderes nacionales sobre el crecimiento del comercio internacional de sus países. Puesto que la apertura económica y el comercio internacional cumplen un rol fundamental propulsando el crecimiento económico y el desarrollo de los países, resulta de gran importancia conocer los determinantes de estas variables. Sin embargo, hasta ahora se había puesto poca o nula atención el rol de los líderes nacionales.  El estudio presentado en esta memoria es el primero en proveer evidencia del efecto de los líderes sobre el comercio internacional. Además, este es el primer estudio que analiza el efecto de los Cinco Grandes rasgos de personalidad  de líderes nacionales a nivel global.
 
 En este estudio se analizan dos hipótesis centrales. La primera es que los líderes nacionales afectan de manera significativa el comercio internacional de sus países. La segunda es que las características de personalidad de los líderes permiten explicar este efecto. Esta segunda hipótesis engloba  a su vez 4 hipótesis referentes a cada rasgo de personalidad.
+
 En el capítulo 2 de esta memoria se analiza la primera hipótesis. La idea central de este análisis es observar el cambio del crecimiento promedio del comercio internacional ocurrido durante las transiciones de líderes en el poder. También es fundamental que el momento en que estas transiciones ocurren sea aleatorio. Por este motivo se conformó una muestra con líderes que dejaron el cargo de forma inesperada. Los resultados obtenidos muestran que la tasa de crecimiento del comercio internacional experimenta cambios anormales de manera consistente durante las transiciones aleatorias, lo cual sugiere que la primera hipótesis es efectivamente válida. 
 
-Posteriormente, en el capítulo 3 se estudia la segunda hipótesis. De manera más específica, se emplea el modelo de los Cinco Grandes rasgos de personalidad y se conjetura que líderes más extravertidos, más responsables, más amables y más abiertos al cambio tienen un efecto positivo sobre el crecimiento del comercio internacional. Para analizar estas hipótesis se estimaron los rasgos de personalidad de los líderes a partir de textos de sus discursos. Se elaboró una base de datos de  1888 discursos de 197 líderes. Posteriormente, se empleó un algoritmo desarrollado recientemente para estimar la personalidad de los líderes a partir de sus discursos. Las medidas de personalidad estimadas mediante este método se muestran robustas ante una serie de análisis y pruebas. Luego se relacionaron estas medidas de personalidad con los efectos de los líderes estimados en el capítulo 2. Se encontró evidencia robusta de la importancia de tres de las cinco dimensiones de personalidad para explicar el efecto de los líderes sobre el comercio internacional. Líderes más extravertidos afectan positivamente el crecimiento y una desviación estándar de diferencia en esta dimensión se traduce en un 3\% de diferencia en el crecimiento del comercio internacional. De manera similar, líderes más responsables y más amables también ejercen un efecto positivo. Una desviación estándar de diferencia en responsabilidad y amabilidad se traduce en un 3\% y 3\% de diferencia en el crecimiento, respectivamente. Un análisis posterior muestra que los dos rasgos de personalidad más importantes resultan ser extraversión y amabilidad. 
+Posteriormente, en el capítulo 3 se estudia la segunda hipótesis. De manera más específica, se emplea el modelo de los Cinco Grandes rasgos de personalidad y se conjetura que líderes más extravertidos, más responsables, más amables y más abiertos al cambio tienen un efecto positivo sobre el crecimiento del comercio internacional. Para analizar estas hipótesis se estimaron los rasgos de personalidad de los líderes a partir de textos de sus discursos. Se elaboró una base de datos de  1888 discursos de 197 líderes. Posteriormente, se empleó un algoritmo desarrollado recientemente para estimar la personalidad de los líderes a partir de sus discursos. Las medidas de personalidad estimadas mediante este método se muestran robustas ante una serie de análisis y pruebas. Luego se relacionaron estas medidas de personalidad con los efectos de los líderes estimados en el capítulo 2. Se encontró evidencia robusta de la importancia de tres de las cinco dimensiones de personalidad para explicar el efecto de los líderes sobre el comercio internacional. Líderes más extravertidos afectan positivamente el crecimiento y una desviación estándar de diferencia en esta dimensión se traduce en un 3\% de diferencia en el crecimiento del comercio internacional. De manera similar, líderes más responsables y más amables también ejercen un efecto positivo. Una desviación estándar de diferencia en responsabilidad y amabilidad se traduce en un 2.4\% y 3.2\% de diferencia en el crecimiento, respectivamente. Un análisis posterior muestra que los dos rasgos de personalidad más importantes resultan ser extraversión y amabilidad. 
 
 Cabe señalar que los resultados obtenidos pueden motivar otras líneas de investigación relacionadas. Por una parte, resulta interesante la pregunta sobre qué otras variables de interés político, económico o financiero podrían ser afectadas por líderes nacionales y  en particular por sus características de personalidad. Una de las variables que ha llamado la atención de los autores de este estudio es la participación de los países en conflictos armados. De manera intuitiva cabría esperar que los factores inestabilidad emocional y amabilidad jueguen un rol en el proceso de toma de decisiones de un líder confrontado ante la posibilidad de entrar en un conflicto internacional. Por otra parte, también puede ser interesante el uso de la metodología usada en este estudio para analizar el efecto de la personalidad en la labor de otros políticos y personajes públicos, tales como ministros, legisladores o CEO de empresas.
 
